# trashpandas

./: .gitignore  README.md  coverage.json  interfaces.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sql.py  tox.ini  utils.py
.github/workflows/: tests.yml
docs/: logo.pptx
examples/: 01_basic_usage.ipynb  02_advanced_features.ipynb  03_format_conversion.ipynb  04_query_capabilities.ipynb  EXECUTION_NOTES.md  README.md  create_notebooks.py  execute_all_notebooks.py  execute_and_save_notebooks.py  run_notebooks.py  test_notebooks.py
notebooks/: creds.py  sqlalchemy_test.ipynb
notebooks/.ipynb_checkpoints/: sqlalchemy_test-checkpoint.ipynb
src/trashpandas/: __init__.py  async_file.py  async_sql.py  conversion.py  csv.py  exceptions.py  hdf5.py  interfaces.py  metadata.py  pickle.py  sql.py  utils.py  validation.py
tests/: setup_test.py  test_conversion.py  test_csv.py  test_csv_modern.py  test_hdf5.py  test_new_features.py  test_pickle.py  test_pickle_modern.py  test_remaining_coverage.py  test_sql.py  test_sql_modern.py  test_validation.py
trashpandas/: hdf5.py  utils.py
